namespace DataDictationaryService.Domain.AggregatesModel.DataDictationaryAggregate.Requisites;

public class DataDictationaryRecordItemRequisite:Requisite<DataDictationaryRecordItem>
{
    
}