namespace DataDictationaryService.Domain.AggregatesModel.DataDictationaryAggregate.Requisites;

public class StringRequisite:Requisite<string>
{
    public StringRequisite(string name,string value):base(name,value)
    {
        
    }
}